force-app/main/default/objects/pse__Assignment__c/fields/pse__Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>pse__Rate_Card__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>