force-app/main/default/objects/pse__Assignment__c/fields/pse__Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resource Request Lookup populated only when assignment is created from a resource request.</description>
    <label>Resource Request</label>
    <referenceTo>pse__Resource_Request__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>