force-app/main/default/objects/pse__Assignment__c/fields/pse__Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BA (MTX)</fullName>
            </value>
            <value>
                <fullName>Biz Arch</fullName>
            </value>
            <value>
                <fullName>Change Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Content Marketer</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CPQ Arch</fullName>
            </value>
            <value>
                <fullName>CS - BA</fullName>
            </value>
            <value>
                <fullName>CS - FED</fullName>
            </value>
            <value>
                <fullName>CS - Platform Dev</fullName>
                <label>CS - PD</label>
            </value>
            <value>
                <fullName>CS - PM</fullName>
            </value>
            <value>
                <fullName>CS - SFDC Dev</fullName>
                <label>CS-SF Dev</label>
            </value>
            <value>
                <fullName>CS - TL</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>Design Engineer</fullName>
            </value>
            <value>
                <fullName>Director, FED</fullName>
                <label>Dir FED</label>
            </value>
            <value>
                <fullName>Dir of HR &amp; Recruiting</fullName>
            </value>
            <value>
                <fullName>Exec</fullName>
            </value>
            <value>
                <fullName>Experience Strategist</fullName>
            </value>
            <value>
                <fullName>FED</fullName>
            </value>
            <value>
                <fullName>FED (CG)</fullName>
            </value>
            <value>
                <fullName>FED (CT)</fullName>
            </value>
            <value>
                <fullName>FED (GS)</fullName>
            </value>
            <value>
                <fullName>FED (MTX)</fullName>
            </value>
            <value>
                <fullName>FED (Offshore)</fullName>
                <label>FED (Off)</label>
            </value>
            <value>
                <fullName>Front Desk Receptionist</fullName>
            </value>
            <value>
                <fullName>Integration Architect</fullName>
                <label>IA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>