force-app/main/default/objects/pse__Assignment__c/fields/pse__Schedule__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule</label>
    <referenceTo>pse__Schedule__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>