force-app/main/default/objects/pse__Assignment__c/fields/pse__Schedule_Updated__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Schedule Updated</label>
    <type>Checkbox</type>
</CustomField>