force-app/main/default/objects/pse__Assignment__c/fields/pse__Team_Member_Swap_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Member_Swap_Date__c</fullName>
    <description>This field shows the date on which most recent swap occurred. Note this field is only used in the swap shift functionality in Team Schedule Planner.</description>
    <inlineHelpText>This field shows the date on which most recent swap occurred. Note this field is only used in the swap shift functionality in Team Schedule Planner.</inlineHelpText>
    <label>Team Member Swap Date</label>
    <type>Date</type>
</CustomField>