force-app/main/default/objects/pse__Assignment__c/fields/pse__Team_Member_Swapped_Out__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Member_Swapped_Out__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the most recent resource who was previously assigned to the assignment before the action of shift swap. Note this field is used in the swap shift functionality in Team Schedule Planner.</description>
    <inlineHelpText>This field shows the most recent resource who was previously assigned to the assignment before the action of shift swap. Note this field is used in the swap shift functionality in Team Schedule Planner.</inlineHelpText>
    <label>Team Member Swapped Out</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignments (Team Member Swapped Out)</relationshipLabel>
    <relationshipName>Assignments2</relationshipName>
    <type>Lookup</type>
</CustomField>