force-app/main/default/objects/pse__Assignment__c/fields/pse__Timecard_Internal_Costs_In_Financials__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Internal_Costs_In_Financials__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Timecard Internal Costs In Financials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>