force-app/main/default/objects/pse__Assignment__c/fields/pse__Use_Resource_Currency_For_Resource_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Resource_Currency_For_Resource_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Resource Currency For Resource Cost</label>
    <type>Checkbox</type>
</CustomField>