force-app/main/default/objects/pse__Assignment__c/fields/pse__Use_Resource_Default_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Resource_Default_Cost_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Resource Default Cost Rate</label>
    <type>Checkbox</type>
</CustomField>