force-app/main/default/objects/pse__Assignment__c/fields/WAR__c.field-meta.xml
<CustomField>
    <fullName>WAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the assignment will be working at risk. Uncheck when the opportunity has reached stage 8 closed/won.</description>
    <inlineHelpText>Check this box if the assignment will be working at risk. Uncheck when the opportunity has reached stage 8 closed/won.</inlineHelpText>
    <label>WAR</label>
    <type>Checkbox</type>
</CustomField>