force-app/main/default/objects/pse__Assignment__c/validationRules/Bill_Assignments_may_not_be_Credited_V2.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_Assignments_may_not_be_Credited_V2</fullName>
    <active>true</active>
    <description>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</description>
    <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Credited__c)

&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</errorMessage>
</ValidationRule>