force-app/main/default/objects/pse__Assignment__c/validationRules/Billable_Bill_Rate_Cannot_be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Billable_Bill_Rate_Cannot_be_Zero</fullName>
    <active>true</active>
    <description>Assignments marked Billable must have a Bill Rate greater than zero.</description>
    <errorConditionFormula>AND(pse__Is_Billable__c=TRUE,pse__Bill_Rate__c = 0.0,NOT(ISPICKVAL(pse__Role__c, &apos;Coverage&apos;)))

&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
    <errorMessage>Assignments marked Billable must have a Bill Rate greater than zero.</errorMessage>
</ValidationRule>